--- a/Services/Catalog/Catalog.API/appsettings.json
+++ b/Services/Catalog/Catalog.API/appsettings.json
@@ -2,7 +2,7 @@
   "DatabaseSettings": {
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "ProductDb",
-    "CollectionName": "Products3"
+    "CollectionName": "Products"
   },
   "EventBusSettings": {
     "HostAddress": "amqp://guest:guest@localhost:5672"
